--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.8",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
