--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "firebase": "^9.6.8",
     "jquery": "^3.6.0",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
@@ -55,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.2.0"
   }
 }
