--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-image-file-resizer": "^0.4.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.4",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.3",
