--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.8",
+    "framer-motion": "^6.3.15",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
