--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,15 +25,21 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
+    "react-country-flag": "^3.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-image-file-resizer": "^0.4.7",
+    "react-phone-input-2": "^2.15.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.0.5",
     "reactstrap": "^9.1.1",
     "styled-components": "^5.3.5",
+    "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
